--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,7 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4
     
+      - name: Setup Nodejs
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
