--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
+
+      - name: Setup Corepack
+        run: corepack enable
+
+      - name: Install dependencies
+        run: yarn
+        
+        
