--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,7 @@ jobs:
 
       - name: Install dependencies
         run: yarn
-        
+
+      - name: Run Tests
+        run: yarn test
         
