--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,16 @@ jobs:
         run: |
              SHA=$(echo $GITHUB_SHA | head -c7)
              echo "sha=$SHA" >> $GITHUB_OUTPUT
+
+      - name: Login in DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build Docker Image
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/aula_devops:${{steps.generate_tag.output.sha}}
+
+      - name: Push to Docker Hub
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/aula_devops:${{steps.generate_tag.output.sha}}
         
