--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
 name: CI-CD
+
 on:
   push:
     branches:
@@ -6,12 +7,13 @@ on:
   pull_request:
     branches:
       - master
+
 jobs:
   build:
     name: Build and Push
     runs-on: ubuntu-latest
     outputs:
-      docker_tag: ${{steps.generate_tag.outputs.sha}}
+      docker_tag: ${{ steps.generate_tag.outputs.sha }}
 
     steps:
       - name: Checkout source code
@@ -34,8 +36,8 @@ jobs:
       - name: Generate Tag
         id: generate_tag
         run: |
-             SHA=$(echo $GITHUB_SHA | head -c7)
-             echo "sha=$SHA" >> $GITHUB_OUTPUT
+          SHA=$(echo $GITHUB_SHA | head -c7)
+          echo "sha=$SHA" >> $GITHUB_OUTPUT
 
       - name: Login in DockerHub
         uses: docker/login-action@v3
@@ -44,8 +46,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/aula_devops:${{steps.generate_tag.output.sha}}
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/aula_devops:${{ steps.generate_tag.outputs.sha }} .
 
       - name: Push to Docker Hub
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/aula_devops:${{steps.generate_tag.output.sha}}
-        
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/aula_devops:${{ steps.generate_tag.outputs.sha }}
